# zkevm-circuits

./: CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  LISEZMOI.md  README.md  out.txt
.github/cloudRun/: cloud-tests-local-trigger.sh  cloud-tests-trigger.sh  github-action-trigger.sh  run.sh
.github/integrationBenchScripts/: 04_clone.sh  07_execBench.sh  08_processResults.sh  cloud-tests-local-trigger.sh  cloud-tests-trigger.sh  github-action-trigger.sh  reporting_main.py  reporting_modules.py
.github/integrationTestsScripts/: wakeUpRunner.sh
.github/proverCiScripts/: deployToProver.sh
.github/weeklyBenchScripts/: 00_installGo.sh  01_installDeps.sh  03_prepareProver.sh  04_clone.sh  05_build.sh  06_rsSysstat.sh  07_execBench.sh  08_processResults.sh  bench-results-cleanup.sh  bench-results-local-cleanup.sh  bench-results-local-trigger.sh  bench-results-setup.sh  bench-results-trigger.sh  github-action-cleanup.sh  github-action-setup.sh  github-action-trigger.sh
.github/workflows/: cloud-run.yml  integration-bench.yml  weekly-bench.yml
bus-mapping/: Cargo.toml
bus-mapping/src/: circuit_input_builder.rs  error.rs  lib.rs  mock.rs  public_input_builder.rs
bus-mapping/src/circuit_input_builder/: block.rs  chunk.rs  execution.rs  input_state_ref.rs  protocol_instance.rs  protocol_instance_.rs  tracer_tests.rs  transaction.rs
bus-mapping/src/evm/: opcodes.rs
bus-mapping/src/evm/opcodes/: address.rs  balance.rs  begin_end_tx.rs  calldatacopy.rs  calldataload.rs  calldatasize.rs  caller.rs  callop.rs  callvalue.rs  chainid.rs  codecopy.rs  codesize.rs  dup.rs  error_return_data_outofbound.rs  error_write_protection.rs  extcodecopy.rs  extcodehash.rs  extcodesize.rs  gasprice.rs  invalid_tx.rs  logs.rs  memory_expansion_test.rs  mload.rs  mstore.rs  number.rs  origin.rs  return.rs  return_revert.rs  returndatacopy.rs  returndatasize.rs  selfbalance.rs  sha3.rs  sload.rs  sstore.rs  stackonlyop.rs  swap.rs
circuit-benchmarks/: Cargo.toml
circuit-benchmarks/examples/: pi_circuit_integration.rs  super_circuit_integration.rs
circuit-benchmarks/src/: bit_keccak.rs  copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  lib.rs  pi_circuit_with_verifier.rs  rlp_decode_circuit.rs  super_circuit.rs  taiko_super_circuit.rs  tx_circuit.rs
eth-types/: Cargo.toml
eth-types/src/: geth_types.rs  lib.rs  sign_types.rs
expr-macros/: Cargo.toml
expr-macros/src/: bool.rs  lib.rs
expr-macros/tests/: bool.rs
external-tracer/src/: lib.rs
gadgets/: Cargo.toml
gadgets/src/: is_equal.rs  is_zero.rs  less_than.rs  lib.rs  monotone.rs  util.rs
geth-utils/: Cargo.toml  build.rs  go.mod  go.sum
geth-utils/gethutil/: trace.go
geth-utils/lib/: lib.go
geth-utils/src/: lib.rs
integration-tests/: Cargo.toml  README.md  run.sh
integration-tests/contracts/WETH9/: README.md  WETH9.sol
integration-tests/src/: circuits_utils.rs  integration_public_data_circuits.rs  integration_test_circuits.rs  lib.rs  taiko_test_public_data.rs  taiko_utils.rs
integration-tests/tests/: circuit_input_builder.rs  circuits.rs  rpc.rs  taiko_circuit_input_builder.rs  taiko_circuits.rs  taiko_test_public_data.rs
keccak256/src/: permutation.rs
keccak256/src/permutation/: base_conversion.rs  circuit.rs  mixing.rs  tables.rs
mock/: Cargo.toml
mock/src/: block.rs  test_ctx.rs  transaction.rs
testool/: Cargo.toml  README.md
testool/src/: abi.rs
testool/src/statetest/: json.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/fuzz/: Cargo.toml  fuzz_evm.sh  fuzz_raport.txt  fuzz_report.sh  fuzz_targets.rs
zkevm-circuits/fuzz/fuzz_targets/: bytecode.rs  evm.rs  exp.rs  fuzz_target_1.rs  lib.rs  state.rs  tx.rs
zkevm-circuits/resources/test/: txlist_rlp_bytes.hex
zkevm-circuits/src/: anchor_tx_circuit.rs  anchor_tx_circuit_.rs  bytecode_circuit.rs  compress_circuit.rs  copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  keccak_circuit.rs  lib.rs  pi_circuit.rs  pi_circuit2.rs  rlp_decoder.rs  rlp_decoder_tables.rs  root_circuit.rs  state_circuit.rs  super_circuit.rs  table.rs  taiko_pi_circuit.rs  taiko_pi_circuit_.rs  taiko_pi_circuit__.rs  taiko_super_circuit.rs  test_util.rs  tx_circuit.rs  util.rs  witness.rs
zkevm-circuits/src/anchor_tx_circuit/: dev.rs  sign_verify.rs  test.rs
zkevm-circuits/src/anchor_tx_circuit_/: dev.rs  test.rs
zkevm-circuits/src/blake2b/circuit/: Cargo.toml  Stats.ods
zkevm-circuits/src/blake2b/circuit/src/: lib.rs
zkevm-circuits/src/blake2b/circuit/tests/: bench.rs  integration.rs
zkevm-circuits/src/blake2b_circuit/: Cargo.toml
zkevm-circuits/src/blobkzg_circuit/: Cargo.toml
zkevm-circuits/src/blobkzg_circuit/src/: main.rs
zkevm-circuits/src/bytecode_circuit/: circuit.rs
zkevm-circuits/src/circuit_tools/: cached_region.rs  cell_manager.rs  constraint_builder.rs  memory.rs
zkevm-circuits/src/compress_circuit/: table.rs
zkevm-circuits/src/copy_circuit/: test.rs
zkevm-circuits/src/evm_circuit/: execution.rs  step.rs  table.rs  util.rs  witness.rs
zkevm-circuits/src/exp_circuit/: test.rs
zkevm-circuits/src/keccak_circuit/: keccak_bit.rs  keccak_packed.rs  keccak_packed_multi.rs  util.rs
zkevm-circuits/src/pi_circuit/: dev.rs  param.rs  test.rs
zkevm-circuits/src/rlp_decoder/: level_len_gadget.rs  level_len_gadget_cb.rs  nested_remain_gadget.rs  rlp_constraint_builder.rs  txlist_rlp_decoder.rs
zkevm-circuits/src/root_circuit/: pcd_aggregation.rs  taiko_aggregation.rs
zkevm-circuits/src/state_circuit/: constraint_builder.rs  lexicographic_ordering.rs  lookups.rs  test.rs
zkevm-circuits/src/super_circuit/: test.rs
zkevm-circuits/src/table/: block_table.rs  byte_table.rs  bytecode_table.rs  keccak_table.rs  pi_table.rs  tx_table.rs
zkevm-circuits/src/taiko_pi_circuit/: dev.rs  param.rs  test.rs
zkevm-circuits/src/taiko_pi_circuit_/: param.rs  protocol_instance.rs  test.rs
zkevm-circuits/src/taiko_super_circuit/: test.rs
zkevm-circuits/src/tx_circuit/: sign_verify.rs  test.rs
zkevm-circuits/src/witness/: block.rs  protocol_instance.rs  rw.rs  step.rs  taiko.rs  tx.rs
zkevm-circuits/tests/: prover_error.rs
(+69 files in other folders)
