[package]
name = "zkevm-circuits-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params"], tag = "v2023_04_20" }
halo2curves = "0.4.0"
libfuzzer-sys = "0.4"
log = "0.4.20"
secp256k1-sys = { version = "0.6.1", features = ['std'] }
#zkevm-circuits = { git = "https://github.com/taikoxyz/zkevm-circuits" }

[dependencies.zkevm-circuits]
path = "../"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
