[package]
name = "blobkzg_circuit"
version = "0.1.0"
edition = "2021"
authors = ["mario a. barbara <mariobarbara@protonmail.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/mabbamOG/halo2.git" } 
halo2wrong_integer = {package = "integer", git = "https://github.com/mabbamOG/halo2wrong"} 
halo2wrong_maingate = {package = "maingate", git = "https://github.com/mabbamOG/halo2wrong"}

[dev-dependencies]
rand_core = "0.6.4"