[package]
name = "blake2b_circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
ark-std = { version = "0.3", features = ["print-trace"] }
rand_xorshift = "0.3"
rand = "0.8"
